fix footer wrapping

--- a/public/global.css
+++ b/public/global.css
@@ -15,3 +15,7 @@
 .post-detail a {
     color: #95afa4;
 }
+
+code {
+    white-space: pre-wrap !important;
+}
